--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "3.7.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "recoil": "^0.2.0",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
