--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "cross-env NODE_ENV=production electron ./dist/main",
     "dev:renderer": "vite",
     "dev:main": "cross-env NODE_ENV=development node -r esbuild-register ./scripts/dev.ts",
-    "build": "rimraf dist && vite build && npm run prod:esbuild",
+    "build": "rimraf dist && vite build && npm run prod:esbuild && npm run publish:win",
     "prod:esbuild": "cross-env NODE_ENV=production node -r esbuild-register ./scripts/prod.ts",
     "prod:tsc": "tsc --project ./src/main/tsconfig.json",
     "publish": "concurrently \"npm:publish:mac\" \"npm:publish:win\"",
@@ -29,7 +29,9 @@
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^3.1.2",
     "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@sync-labs/eslint-config": "^2.2.6",
     "@types/node": "^14.14.31",
@@ -49,6 +51,7 @@
     "eslint": "^7.20.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "rollup-plugin-esbuild": "^3.0.2",
     "typescript": "^4.1.2",
     "vite": "^2.0.4",
     "vite-plugin-twstyled": "^3.2.4"
@@ -106,12 +109,13 @@
       ]
     },
     "win": {
-      "publisherName": "twstyled contributors",
-      "sign": null,
-      "publish": [
+      "requestedExecutionLevel": "requireAdministrator",
+      "target": [
         {
-          "provider": "generic",
-          "url": "https://files.twstyled.com/releases/${name}/${os}/"
+          "target": "nsis",
+          "arch": [
+            "x64"
+          ]
         }
       ]
     },
