--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["vite/client", "@twstyled/core"],
+    "types": ["vite/client", "node"],
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
@@ -13,7 +13,7 @@
     "baseUrl": "../../src",
     "paths": {
       "@/renderer/*": ["renderer/*"],
-      "@/common/*": ["common/*"],
+      "@/common/*": ["common/*"]
     },
     "allowSyntheticDefaultImports": true
   },
