--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-esbuild": "^3.0.2",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.1.2",
     "vite": "^2.0.4"
