--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "speakin-intelligent-metting",
-  "description": "智能 会议",
+  "description": "智能 会议 系统",
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
@@ -22,8 +22,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
-    "recoil": "^0.2.0",
-    "tailwindcss": "^2.0.3"
+    "recoil": "^0.2.0"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.2",
@@ -69,19 +68,9 @@
     "productName": "智能会议系统",
     "afterSign": "scripts/notarize.js",
     "mac": {
-      "category": "public.app-category.developer-tools",
-      "extendInfo": {
-        "NSUserNotificationAlertStyle": "alert"
-      },
-      "hardenedRuntime": true,
-      "gatekeeperAssess": false,
-      "entitlements": ".config/entitlements.mac.plist",
-      "entitlementsInherit": ".config/entitlements.mac.plist",
-      "publish": [
-        {
-          "provider": "generic",
-          "url": "https://files.twstyled.com/releases/${name}/${os}/"
-        }
+      "artifactName": "${productName}_setup_${version}.${ext}",
+      "target": [
+        "dmg"
       ]
     },
     "dmg": {
@@ -114,7 +103,8 @@
             "x64"
           ]
         }
-      ]
+      ],
+      "artifactName": "${productName}_setup_${version}.${ext}"
     },
     "asar": true,
     "extraMetadata": {
