--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "esbuild-register": "^2.0.0",
     "eslint": "^7.20.0",
     "postcss": "^8.2.10",
+    "postcss-import": "^14.0.1",
+    "postcss-nested": "^5.0.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup-plugin-esbuild": "^3.0.2",
