--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -13,7 +13,8 @@
     "baseUrl": "../../src",
     "paths": {
       "@/renderer/*": ["renderer/*"],
-      "@/common/*": ["common/*"]
+      "@/common/*": ["common/*"],
+      "@/root/*": ["/*"]
     },
     "allowSyntheticDefaultImports": true
   },
