--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
     "baseUrl": ".",
     "paths": {
       "@/renderer/*": ["src/renderer/*"],
-      "@/common/*": ["src/common/*"],
-      "root/*": ["/*"]
+      "@/common/*": ["src/common/*"]
     }
   },
   "include": [
