--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -14,7 +14,7 @@
     "paths": {
       "@/renderer/*": ["renderer/*"],
       "@/common/*": ["common/*"],
-      "@/root/*": ["/*"]
+      "@/root/*": ["../*"]
     },
     "allowSyntheticDefaultImports": true
   },
